Fix Filebot dependencies